--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "next": "14.1.1",
