--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.18",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
+    "framer-motion": "^11.0.22",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
