--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
