--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spring": "^9.7.3",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
