--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "framer-motion": "^11.0.22",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.1",
     "nodemon": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spring": "^9.7.3",
-    "sharp": "^0.33.3",
+    "sharp": "^0.33.4",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
