--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.1.1",
     "nodemon": "^3.1.0",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
