--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express-session": "^1.18.0",
     "framer-motion": "^11.0.22",
     "multer": "^1.4.5-lts.1",
-    "next": "14.1.1",
+    "next": "^14.2.3",
     "nodemon": "^3.1.0",
     "plaiceholder": "^3.0.0",
     "react": "^18",
