--- a/package.json
+++ b/package.json
@@ -7,33 +7,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "serverdev": "nodemon backend/server.js",
-    "serverstart": "node backend/server.js"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.18",
     "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.15.12",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
     "framer-motion": "^11.0.22",
-    "multer": "^1.4.5-lts.1",
     "next": "^14.2.3",
     "nodemon": "^3.1.0",
-    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-spring": "^9.7.3",
-    "sharp": "^0.33.4",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -46,5 +29,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "author": "Jakub Madejczyk",
+  "license": "ISC",
+  "description": "Website for madej.art"
 }
