--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/lab": "^5.0.0-alpha.167",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.22",
     "next": "^14.2.3",
     "nodemon": "^3.1.0",
