docker-compose configuration changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   frontend:
     image: jakmad/frontend_madej.art:latest
-    command: npm run dev
+    command: npm run watch
     ports:
       - "3000:3000"
     networks:
       - app-network
-    # volumes:
-    #   - images_data:/public/images
+    volumes:
+      - ./images:/frontend/public/images
 
   backend:
     image: jakmad/api_madej.art:latest
@@ -16,15 +16,10 @@ services:
       - "3001:3001"
     networks:
       - app-network
-    # volumes:
-    #   - images_data:/src/images
-    #   - db_data:/src/database
+    volumes:
+      - ./images:/backend/src/images
+      - ./database:/backend/src/database
 
 networks:
   app-network:
     driver: bridge
-# volumes:
-#   images_data:
-#   db_data:
-# TODO dodać volumes ( ten folder ze zdjęciami )
-# naprawić błędy z konsoli
