--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "watch": "nodemon --watch public/images -e jpg,png,gif,jpeg --exec 'npm run start'"
+    "watch": "nodemon --watch public/images -e jpg,png,gif,jpeg --delay 10 --exec 'npm run start'"
   },
   "dependencies": {
     "@mui/lab": "^5.0.0-alpha.167",
